--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+addict==2.4.0
 anyio==4.3.0
 appnope==0.1.4
 argon2-cffi==23.1.0
@@ -9,28 +10,39 @@ attrs==23.2.0
 Babel==2.14.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
+blinker==1.7.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
 comm==0.2.1
+ConfigArgParse==1.7
 contourpy==1.2.0
 cycler==0.12.1
+dash==2.16.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
 debugpy==1.8.1
 decorator==5.1.1
 defusedxml==0.7.1
 executing==2.0.1
 fastjsonschema==2.19.1
+Flask==3.0.2
 fonttools==4.49.0
 fqdn==1.5.1
 h11==0.14.0
 httpcore==1.0.4
 httpx==0.27.0
 idna==3.6
+importlib-metadata==7.0.1
 ipykernel==6.29.2
 ipython==8.22.1
 isoduration==20.11.0
+itsdangerous==2.1.2
 jedi==0.19.1
 Jinja2==3.1.3
+joblib==1.3.2
 json5==0.9.17
 jsonpointer==2.4
 jsonschema==4.21.1
@@ -55,6 +67,7 @@ nbformat==5.9.2
 nest-asyncio==1.6.0
 notebook_shim==0.2.4
 numpy==1.26.4
+open3d==0.18.0
 opencv-python==4.9.0.80
 overrides==7.7.0
 packaging==23.2
@@ -64,6 +77,7 @@ parso==0.8.3
 pexpect==4.9.0
 pillow==10.2.0
 platformdirs==4.2.0
+plotly==5.19.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
 psutil==5.9.8
@@ -72,6 +86,7 @@ pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.17.2
 pyparsing==3.1.1
+pyquaternion==0.9.9
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2024.1
@@ -79,9 +94,11 @@ PyYAML==6.0.1
 pyzmq==25.1.2
 referencing==0.33.0
 requests==2.31.0
+retrying==1.3.4
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.18.0
+scikit-learn==1.4.1.post1
 scipy==1.12.0
 seaborn==0.13.2
 Send2Trash==1.8.2
@@ -89,11 +106,15 @@ six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
 stack-data==0.6.3
+tenacity==8.2.3
 terminado==0.18.0
+threadpoolctl==3.3.0
 tinycss2==1.2.1
 tornado==6.4
+tqdm==4.66.2
 traitlets==5.14.1
 types-python-dateutil==2.8.19.20240106
+typing_extensions==4.10.0
 tzdata==2024.1
 uri-template==1.3.0
 urllib3==2.2.1
@@ -101,3 +122,5 @@ wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.7.0
+Werkzeug==3.0.1
+zipp==3.17.0
